# Laboratorio4_IE0724

./: CMakeLists.txt  Dockerfile  README.md  puntosInvalidos2.txt  puntosInvalidos3.txt
.github/workflows/: docker-publish.yml
include/: CGALBridge.hpp
src/: Proyecto1.cpp  dummy.cpp
test/: Tests.cpp  dummy.cpp  test_0.cpp
